--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-certifi==2022.12.7
-distlib==0.3.6
-filelock==3.12.0
-pipenv==2023.4.20
-platformdirs==3.2.0
-virtualenv==20.22.0
-virtualenv-clone==0.5.7
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
+openai==0.27.8
+pick==2.2.0
+requests==2.31.0
+tqdm==4.65.0
+urllib3==2.0.3
+yarl==1.9.2
